logs/cs.video.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/cs'...
Listing './lib/python3.5/site-packages/cs/video'...
Listing './lib/python3.5/site-packages/cs/video/Extensions'...
Compiling './lib/python3.5/site-packages/cs/video/Extensions/Install.py'...
***   File "./lib/python3.5/site-packages/cs/video/Extensions/Install.py", line 47
    print "Warning: '"+skinlayer+"' layer already removed from '"+skinName+"' skin"
                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/cs/video/browser'...
Listing './lib/python3.5/site-packages/cs/video/content'...
Listing './lib/python3.5/site-packages/cs/video/locales'...
Listing './lib/python3.5/site-packages/cs/video/locales/en'...
Listing './lib/python3.5/site-packages/cs/video/locales/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/cs/video/locales/es'...
Listing './lib/python3.5/site-packages/cs/video/locales/es/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/cs/video/locales/eu'...
Listing './lib/python3.5/site-packages/cs/video/locales/eu/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/cs/video/profiles'...
Listing './lib/python3.5/site-packages/cs/video/profiles/default'...
Listing './lib/python3.5/site-packages/cs/video/profiles/default/types'...
Listing './lib/python3.5/site-packages/cs/video/skins'...
Listing './lib/python3.5/site-packages/cs/video/skins/video_templates'...
Listing './lib/python3.5/site-packages/cs/video/tests'...
Listing './lib/python3.5/site-packages/cs.video-3.0.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
